2019-02-10: Minor UI fixes for phone resolutions (overflow-y scrolling and removing spacer in modal.

--- a/game/css/main.css
+++ b/game/css/main.css
@@ -2229,8 +2229,8 @@ a {
 
   .modal-content {
     width: 80%;
-    height: 67.5%;
-    overflow-y: hidden;
+    height: 77.5%;
+    overflow-y: scroll;
   }
 
   .slider__contents {
@@ -2259,10 +2259,12 @@ a {
    #upgrade_table {
     width: 100%;
     height: 100%;
-    overflow-y: hidden;
+    overflow-y: scroll;
    }
 
-
+   #perk_table {
+    overflow-y: scroll;
+   }
    .pricing-header {
     font-size: 2em;
     margin-bottom: 3.5%;
